# maestro

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  combine_run_all_scripts.py  combined_run_all_scripts.md  environment.yml  pyproject.toml  requirements.txt  train_baselines.py  train_maestro_teacher.py  train_maestro_yolo.py
.github/workflows/: ci.yml
configs/: default.yaml  defaults.yaml
configs/ablations/: state_ablate_grad.yaml
configs/datasets/: coco.yaml  crowdhuman.yaml  lvis.yaml  target.yaml  voc.yaml
configs/meta_train/: lofo_classification.yaml  lofo_detection.yaml  small_cpu_debug.yaml
configs/publication/: classification_pub.yaml  detection_pub.yaml  main_suite.yaml  ner_pub.yaml
configs/tasks/: classification.yaml  detection.yaml  ner.yaml
data/: README.md
maestro/: __init__.py  probes.py  stats.py
maestro/baselines/: __init__.py  (+6 more)
scripts/: download_datasets.sh  evaluate.py  export_learning_curves.py  generate_ood_grid.py  generate_tables.py  make_publication_figures.py  meta_train.py  plot_comparative.py  plot_make_figures.py  run_ablation.py  run_ablation_suite.py  run_all.sh  run_all_baselines.sh  run_comparative.py  run_eval.py  run_large_transfer.py  run_markov_diag.py  run_meta_train.py  run_n_invariance.py  run_publication.sh  verify_teacher_pipeline.py
tests/: test_baselines_stateful.py  test_detection_collate.py  test_diagnostics.py  test_env.py  test_env_api.py  test_markov_diag.py  test_metrics.py  test_observation.py  test_observation_blocks.py  test_policy_invariance.py  test_rollout.py  test_yolo_mix_utils.py
(+52 files in other folders)
